@@ -3,6 +3,8 @@ Gaim: The Pimpin' Penguin IM Client that's good for the soul!
 version 1.0.1cvs
 	Bug Fixes:
 	* Send-As menu duplicates less work (Dave West)
+	* Can now see your own MSN buddy icon (Felipe Contreras)
+	* Misc other fixes that weren't noted here
 
 version 1.0.0 (09/17/2004):
 	New Features:
